FEAT: Add CIP-68 Support for the only Fungible Tokens (#21)
* chore: testing deserialization approaches

* chore: implemented utxo event listener, filters, datum parser etc.

* chore: cleaned up a bit the code

* chore: docs and light refactoring

* chore: initial draft of the get subject v2

* chore: adding missing classes

* chore: ref asset name derivation, fixes

* chore: added docs, added properties filtering

* chore: applied some PR fedback

* chore: applied some PR fedback

* chore: removed unwanted file

* chore: updated application.properties and tests for v2

* chore: added v2 metadata bulk gets
