# api/src/main/java/org/cardanofoundation/tokenmetadata/registry/api/model/v2/LongProperty.java
@@ -1,0 +1,4 @@
+package org.cardanofoundation.tokenmetadata.registry.api.model.v2;
+
+public record LongProperty(Long value, String source) implements Property<Long> {
+}
