# api/src/main/java/org/cardanofoundation/tokenmetadata/registry/api/model/v2/Property.java
@@ -1,0 +1,9 @@
+package org.cardanofoundation.tokenmetadata.registry.api.model.v2;
+
+public interface Property<T> {
+
+    T value();
+
+    String source();
+
+}
