# api/src/main/java/org/cardanofoundation/tokenmetadata/registry/api/model/v2/StringProperty.java
@@ -1,0 +1,4 @@
+package org.cardanofoundation.tokenmetadata.registry.api.model.v2;
+
+public record StringProperty(String value, String source) implements Property<String> {
+}
